# jam-codec-py

./: install.sh  pyproject.toml
scalecodec/: types.py
