[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jam_codec"
version = "0.1.0"
description = "JAM Codec Library"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Stichting Polkascan (Polkascan Foundation)", email = "info@polkascan.org"},
    {name = "Davide Galassi", email = "davxy@datawok.net"},
]
keywords = ["jam", "codec", "polkadot"]
dependencies = [
    "more-itertools",
    "base58>=2.0.1",
    "requests>=2.24.0",
]

[project.optional-dependencies]
test = ["coverage", "pytest"]
